Fixes pieces alignment after switching to partials

--- a/app/css/application.css
+++ b/app/css/application.css
@@ -27,6 +27,7 @@ body {
   display: table-cell;
   vertical-align: middle;
   text-transform: uppercase;
+  width: 100%;
 }
 
 .top { border-top: 0; border-bottom: 0; }
